[package]
name = "tofupilot"
version = "2.0.0"
edition = "2021"
rust-version = "1.75"
description = "TofuPilot APIv2: TofuPilot REST API for managing runs, units, procedures, and more."
license = "MIT"
readme = "README.md"
repository = "https://github.com/tofupilot/tofupilot-rust"
keywords = ["tofupilot", "test", "manufacturing", "api", "sdk"]
categories = ["api-bindings"]

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
fastrand = "2"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["fs", "time"] }
urlencoding = "2"
uuid = { version = "1", features = ["serde", "v4"] }

[dev-dependencies]
chrono = { version = "0.4" }
tokio = { version = "1", features = ["full", "macros"] }
uuid = { version = "1", features = ["v4"] }
