[package]
name = "tofupilot"
version = "0.1.1"
edition = "2021"
rust-version = "1.75"
description = "TofuPilot APIv2: TofuPilot REST API for managing runs, units, procedures, and more."
license = "MIT"
readme = "README.md"
repository = "https://github.com/tofupilot/rust"
keywords = ["tofupilot", "test", "manufacturing", "api", "sdk"]
categories = ["api-bindings"]

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
fastrand = "2"
percent-encoding = "2"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["fs", "time"] }

[dev-dependencies]
tokio = { version = "1", features = ["full", "macros"] }
uuid = { version = "1", features = ["v4"] }
